tsoa fixes
